# wmt26-model-compression

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
data_prep/: build_calibration.py  convert_mtdata_to_jsonl.py  download_wmt26.sh  extract_wmt26_blindset.py
evals/: compute_scores.py  evaluate.sh  hallucinations_checks.py  sanitycheck.sh  summarize.py
modelzip/: config.py  data.py  evaluate.py  report.py  setup.py  submission.py
organizer_submissions/baseline/: requirements.txt  setup.sh
organizer_submissions/bnb-q4/: README.md  compress.sh  setup.sh
organizer_submissions/bnb-q8/: compress.sh  inference.py  prepare_model.py
submissions/: README.md
submissions/awq/: README.md  compress.sh  inference.py  prepare_model.py  requirements.txt  setup.sh
submissions/baseline/: compress.sh  run.sh  setup.sh
submissions/bnb-q4/: compress.sh  inference.py  prepare_model.py  requirements.txt  run.sh  setup.sh
submissions/bnb-q8/: README.md  compress.sh  inference.py  setup.sh
submissions/comet-mixed-precision/: .gitignore  README.md  build_devset.py  compress.sh  inference.py  layer_utils.py  prepare_model.py  sensitivity_sweep.py  setup.sh  solve_budget.py
submissions/gptq/: .gitignore  README.md  compress.sh  inference.py  prepare_model.py  requirements-compress.txt  requirements.txt  setup.sh
