[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelzip"
# version = "0.1.0"
dynamic = ["version", "dependencies"]
description = "Organizer evaluation tools for WMT 2026 Model Compression"
authors = [
    { name="WMT26 Model Compression Organizers", email="nomail@example.com"}
    # contant: { name="Thamme Gowda", email="tgowdan@microsoft.com" },
]
readme = "README.md"
requires-python = ">=3.12"


[project.urls]
Homepage = "https://www2.statmt.org/wmt26/model-compression.html"
Repository = "https://github.com/thammegowda/wmt26-model-compression"

[tool.setuptools.dynamic]
version = {attr = "modelzip.__version__"}
dependencies = {file = "requirements.txt"}


[tool.setuptools.packages.find]
#where = ["src"]  # ["."] by default
include = ["modelzip*"]  # ["*"] by default
exclude = ["tests*", "tmp*", "build*", "dist*"]    # empty by default
#####################


[project.optional-dependencies]
dev = ["black >= 25.0"]

[tool.black]
line-length = 110
target-version = ['py310', 'py311', 'py312' ]
include = '\.pyi?$'
#skip-string-normalization = true